# deepslate

./: Cargo.toml  Dockerfile  README.md  deny.toml  openapi.yaml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yaml  test.yaml
crates/deepslate/: Cargo.toml  build.rs
crates/deepslate-mc/: Cargo.toml
crates/deepslate-mc/src/: codec.rs  error.rs  lib.rs  varint.rs  version.rs
crates/deepslate-mc/src/packets/: handshake.rs  mod.rs  status.rs  traits.rs
crates/deepslate-mc/src/packets/common/: handshake.rs  login.rs  mod.rs  status.rs
crates/deepslate-mc/src/packets/v765/: mod.rs  status.rs
crates/deepslate-mc/src/packets/v773/: mod.rs  status.rs
crates/deepslate/proto/: deepslate.proto
crates/deepslate/src/: api.rs  auth.rs  main.rs  proxy.rs  rpc.rs  utils.rs  velocity.rs
example/: blue.velocity.toml  compose.yaml  green.velocity.toml  paper-global.yml  velocity.Dockerfile
proto/: deepslate.proto
src/: api.rs  main.rs  proxy.rs  rpc.rs  server.rs  utils.rs
