[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Luke Carr <me@carr.sh>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lukecarr/deepslate"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Allow multiple crate versions: this is handled by cargo-deny.
multiple_crate_versions = { level = "allow", priority = 1 }

[profile.release]
lto = true
strip = true
codegen-units = 1
