[package]
name = "deepslate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Programmable Minecraft proxy server."
readme = "https://github.com/lukecarr/deepslate/blob/main/README.md"
homepage = "https://github.com/lukecarr/deepslate"
keywords = ["minecraft", "proxy", "blue-green", "load-balancer"]
categories = ["network-programming"]
publish = false

[features]
default = ["mc-1_21_10"]
# Protocol 773 (1.21.9/1.21.10)
mc-1_21_10 = ["deepslate-mc/protocol-773"]  
mc-1_21_9 = ["deepslate-mc/protocol-773"]

# Protocol 765 (1.20.3/1.20.4)
mc-1_20_4 = ["deepslate-mc/protocol-765"]
mc-1_20_3 = ["deepslate-mc/protocol-765"]

[dependencies]
deepslate-mc = { path = "../deepslate-mc", default-features = false }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.9"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tonic-prost-build = "0.14"

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]
